# test

./: .coverage  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  INSTALL.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml
somos/: __init__.py  somos.py
tests/: test_somos.py
